# case_credit_fraud_official

./: .env.example  .gitignore  Dockerfile  README.md  README_en-us.md  buildspec.yml  config.yml  pyproject.toml  testspec.yml
cloudformation/: install.sh  uninstall.sh
cloudformation/src/lambda/deploy_model/: lambda_deploy_model.py
cloudformation/src/lambda/register_model/: lambda_register_model.py
cloudformation/src/lambda/route_health/: lambda_health.py
cloudformation/src/lambda/route_inference/: lambda_inference.py
cloudformation/src/lambda/run_pipeline/: lambda_run_pipeline.py
cloudformation/templates/: apigateway.yaml  code_pipeline.yaml  ecs.yaml  lambda.yaml  scheduler.yaml  storage.yaml
credit_fraud/: main.py
credit_fraud/pipeline/: context.py  exceptions.py
credit_fraud/pipeline/jobs/: evaluate.py  preprocess_pyspark.py  preprocess_sklearn.py
credit_fraud/pipeline/jobs/lgbm/: __script_info__.json  extra-requirements.txt  train.py  utils.py
credit_fraud/pipeline/jobs/lgbm/js_inference_code/: inference.py
credit_fraud/pipeline/jobs/xgboost/: train.py
credit_fraud/pipeline/steps/: create_model.py  deploy_endpoint.py  evaluate.py  preprocess.py  register_model.py  step.py  train.py
credit_fraud/utils/: __init__.py  helpers.py  logger.py
models/: lgbm_default.json  xgboost_default.json
tests/: test_helpers.py
